# predict_my_run

./: .gitignore  Predict runs.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: master_predict-my-run.yml
