[project]
name = "predict-my-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "mysql-connector-python>=9.4.0",
    "nbformat>=5.10.4",
    "ortools>=9.14.6206",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "pydeck>=0.9.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
]
